# falsifiable-targets

./: .gitignore  CHANGELOG.md  CHANGELOG_v143_entry.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _version.py  direction_audit.py  direction_genetics_substack.md  direction_of_effect_boundary.md  fig_boundary_surface.py  pyproject.toml  run_audit.py  smoke_test.py  validate_claim.py  verify_fixes.py
.github/workflows/: ci.yml
.virtual_documents/: __notebook_source__.ipynb
adapters/: __init__.py  io.py  opentargets.py  protocol.py
claims/: example_hmgcr_statin.yaml  example_novel_caveats.yaml  example_synthetic_retracted.yaml  ipi1_madurella.yaml  paralog_map.yaml  tyk2_psoriasis.yaml
docs/: ADAPTER_PROTOCOL.md  AUDIT_IPI1_v1_1.md  AUDIT_LIMITATIONS_v1_2.md  AUDIT_LIMITATIONS_v1_3.md  AUDIT_TYK2_v1_2.md  AUDIT_TYK2_v1_3.md  CLAIM_SCHEMA.md  MADURELLA_M7_HOOK.md  OPEN_TARGETS_ADAPTER.md  PORTFOLIO_USAGE.md  WHY_THIS_TOOL.md
reports/: ipi1_madurella_audit.json  tyk2_psoriasis_audit.json
reports/acceptance_gate/: _det_a.json  _det_b.json  s1_pcsk9_hypercholesterolemia.json  s2_bace1_alzheimers.json  s3_stap_cells_retracted.json  s4_class_collapse_phantom.json  s5_novel_pathogen_weak.json
reports/portfolio/: portfolio_decision.csv  portfolio_decision.md  portfolio_manifest.json  s1_pcsk9_hypercholesterolemia.json  s2_bace1_alzheimers.json  s3_stap_cells_retracted.json  s4_class_collapse_phantom.json  s5_novel_pathogen_weak.json  s7_kras_g12c_nsclc.json  s8_ccr5_hiv_cure.json  s9_zikv_ns5_contradictory.json
scripts/: acceptance_gate.py  portfolio_audit.py
sentinels/: v1_sentinels.yaml
studies/backtest_2026/: README.md  predictions.md  results.md
studies/backtest_2026/audit_outputs/: _combined_results.json  b1_stap_cells_2014_at_submission.json  b2_cetp_torcetrapib_2005_at_submission.json  b6_bace1_alzheimers_2012_at_submission.json
studies/backtest_2026/claims/: b1_stap_cells_2014_at_submission.yaml  b2_cetp_torcetrapib_2005_at_submission.yaml  b6_bace1_alzheimers_2012_at_submission.yaml
tests/: test_adapters.py  test_confidence_tier.py  test_direction_logic.py  test_live_smoke.py  test_packaging_v1_4_1.py  test_portability.py  test_sentinels.py  test_tyk2_audit.py  test_validation.py
tests/hardtest_claims/: s1_pcsk9_hypercholesterolemia.yaml  s2_bace1_alzheimers.yaml  s3_stap_cells_retracted.yaml  s4_class_collapse_phantom.yaml  s5_novel_pathogen_weak.yaml  s6a_malformed.yaml  s6b_missing_claim_type.yaml  s6d_yaml_parse_error.yaml  s7_kras_g12c_nsclc.yaml  s8_ccr5_hiv_cure.yaml  s9_zikv_ns5_contradictory.yaml
validation/: benchmark_biomarker_fallback.py  bridge_cholesterol.py  bridge_t2d.py  burden_coloc_concordance.py  integrity_gates.py  systematic_benchmark.py
validation/results/: biomarker_fallback_panel.json  burden_coloc_concordance.json  integrity_gates.json  lipid_bridge_concordance.json  systematic_run.json  t2d_bridge_concordance.json
writeup/: direction_of_effect.md
